--- a/login.html
+++ b/login.html
@@ -3,69 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Form</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Login & Register</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Boxicons for Icons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script src="script.js" defer></script>
+    <script>
+        // Fungsi untuk menampilkan form login
+        function login() {
+            document.getElementById("register").style.display = "none";
+            document.getElementById("login").style.display = "block";
+        }
+
+        // Fungsi untuk menampilkan form register
+        function register() {
+            document.getElementById("login").style.display = "none";
+            document.getElementById("register").style.display = "block";
+        }
+
+        // Menampilkan form login secara default
+        window.onload = function() {
+            login();
+        };
+    </script>
 </head>
-<body>
-<nav>
-    <div class="nav-button">
-        <button class="btn" id="loginBtn" onclick="login()">Sign In</button>
-        <button class="btn" id="registerBtn" onclick="register()">Sign Up</button>
-    </div>
-</nav>
+<body class="bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+        <div class="container">
+            <a class="navbar-brand" href="#">TONGKonser</a>
+            <div class="d-flex">
+                <button class="btn btn-primary me-2" id="loginBtn" onclick="login()">Sign In</button>
+                <button class="btn btn-success" id="registerBtn" onclick="register()">Sign Up</button>
+            </div>
+        </div>
+    </nav>
 
-    <div class="wrapper">
-        <form action="" class="registration-form" id="register">
-            <div class="top">
-            <span>Have an account? <a href="#" onclick="login()">Login</a></span>
-            <header>Sign Up</header>
-            </div>
-            <div class="input-box">
-                <input type="text" placeholder="Username">
-                <i class='bx bxs-user' ></i>
-            </div>
-            <div class="input-box">
-                <input type="text" placeholder="Email">
-                <i class='bx bxs-envelope' ></i>
-            </div>
-            <div class="input-box">
-                <input type="text" placeholder="Phone Number">
-                <i class='bx bxs-phone'></i>
-            </div>
-            <div class="input-box">
-                <input type="text" placeholder="Address">
-                <i class='bx bxs-map'></i>
-            </div>
-            <div class="input-box">
-                <input type="password" placeholder="Password">
-                <i class='bx bxs-lock' ></i>
-            </div>
-            <div class="input-box">
-                <input type="submit" value="Register">
-            </div>
-
-        </form>
-
-        <form action="" class="login-form" id="login">
-            <div class="top">
-                <span>Don't have an account? <a href="#" onclick="register()">Register</a></span>
-                <header>Log In</header>
+    <div class="container-sm py-5">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6" style="max-width: 400px;">
+                <!-- Form Register -->
+                <div class="card" id="register">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Sign Up</h5>
+                        <form action="register.php" method="post">
+                            <div class="mb-3">
+                                <label for="nama_lengkap" class="form-label">Fullname</label>
+                                <input type="text" name="fullname" id="fullname" class="form-control" placeholder="Enter your fullname" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email</label>
+                                <input type="email" name="email" id="email" class="form-control" placeholder="Enter your email" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="phone" class="form-label">Phone Number</label>
+                                <input type="text" name="phone" id="phone" class="form-control" placeholder="Enter your phone number" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="address" class="form-label">Address</label>
+                                <input type="text" name="address" id="address" class="form-control" placeholder="Enter your address" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="pass" class="form-label">Password</label>
+                                <input type="password" name="pass" id="pass" class="form-control" placeholder="Enter your password" required>
+                            </div>
+                            <div class="d-grid">
+                                <button type="submit" class="btn btn-success">Register</button>
+                            </div>
+                        </form>
+                        <p class="mt-3 text-center">Have an account? <a href="#" onclick="login()">Login</a></p>
+                    </div>
                 </div>
-            <div class="input-box">
-                <input type="text" placeholder="Username" required>
-                <i class='bx bxs-user' ></i>
-            </div> 
-            <div class="input-box">
-                <input type="password" placeholder="Password" required>
-                <i class='bx bxs-lock' ></i>
-            </div>
 
-            <button type="submit" class="btn">Login</button>
-        
-        </form>
+                <!-- Form Login -->
+                <div class="card" id="login" style="display: none;">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Log In</h5>
+                        <form action="login.php" method="post">
+                            <div class="mb-3">
+                                <label for="email_login" class="form-label">Email</label>
+                                <input type="email" name="email" id="email_login" class="form-control" placeholder="Enter your email" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="pass_login" class="form-label">Password</label>
+                                <input type="password" name="pass_login" id="pass_login" class="form-control" placeholder="Enter your password" required>
+                            </div>
+                            <div class="d-grid">
+                                <button type="submit" class="btn btn-primary">Login</button>
+                            </div>
+                        </form>
+                        <p class="mt-3 text-center">Don't have an account? <a href="#" onclick="register()">Register</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
